Adding new propety to use devtools and adding MainMenu class. The class contains elements of menu in application.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,7 +6,7 @@
     <title>Travel booking platform application</title>
 </head>
 <body>
-<h1>Go wherever you want!</h1>
-<img th:src="@{/images/20190609_174337.jpg}"/>
+<h1>Go wherever you want!!!!</h1>
+<img th:src="@{/images/20190609_174337.jpg}" width="3576" height="1530"/>
 </body>
 </html>
